syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zupacademy.jpcsik";
option java_outer_classname = "KeyManagerGrpc";
option objc_class_prefix = "HLW";

package br.com.zupacademy.jpcsik;

service KeyManagerGrpcService {
  rpc cadastrar (NovaChavePixRequest) returns (NovaChavePixResponse) {}
}

message NovaChavePixRequest {
  string clienteId = 1;
  TipoChave tipoChave = 2;
  string valorChave = 3;
  TipoConta tipoConta = 4;
}

message NovaChavePixResponse {
  string pixId = 1;
}

enum TipoChave {
  CHAVE_DESCONHECIDA = 0;
  CPF = 1;
  TELEFONE = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoConta {
  CONTA_DESCONHECIDA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}